DevOCL/src/objects/CLQ_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_CAP_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAP Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_County__c</fullName>
        <formula>CLQ_Program__r.CLQ_County__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Create_Day_Camp_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Day Camp Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_Notification_Sent__c</fullName>
        <label>Date Notification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_of_Audit__c</fullName>
        <label>Date of Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Due_Date__c</fullName>
        <label>Inspection Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Email_Full_Inspection_Report__c</fullName>
        <description>Check if the full inspection report has been emailed to the provider</description>
        <label>Email Full-Inspection Report</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Email_Summay_Report__c</fullName>
        <label>Email Summay Report</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Inspection object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_File_Note__c</fullName>
        <label>File Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Follow_Up_Inspection_Date__c</fullName>
        <label>Follow Up Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Begin_Date_Time__c</fullName>
        <label>Inspection Begin Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Due_Date__c</fullName>
        <label>Inspection Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_End_Date__c</fullName>
        <label>Inspection End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_End_Time__c</fullName>
        <label>Inspection End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Notice__c</fullName>
        <label>Inspection Notice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InspectionOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Record_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Requirements__c</fullName>
        <inlineHelpText>Enter specific information regarding accessibility or availability of inspection visit related items or people</inlineHelpText>
        <label>Inspection Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Inspection Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Status__c</fullName>
        <label>Inspection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Supervisor / Approver Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Tool</label>
        <referenceTo>CLQ_Inspection_Tools__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Type__c</fullName>
        <label>Inspection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident/Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment - change of location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment - change of capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Is_Follow_Up_Inspection_Required__c</fullName>
        <label>Is Follow Up Inspection Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>On-site Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Notice__c</fullName>
        <label>Notice</label>
        <picklist>
            <picklistValues>
                <fullName>Unannounced</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Announced</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Notification_Due_Date__c</fullName>
        <formula>CLQ_Date_Notification_Sent__c +30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_On_Site_Representative_Present__c</fullName>
        <label>On-Site Representative Present</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_On_Site_Representative__c</fullName>
        <label>On- Site Representative</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Original_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Associated Inspections (Follow-Ups)</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Owner_Manager__c</fullName>
        <formula>CLQ_Inspection_Owner__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_s_Email_Address__c</fullName>
        <label>Program&apos;s Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_s_Licensing_Specialist__c</fullName>
        <label>Program&apos;s Licensing Specialist</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Published_to_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published to Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Reason_for_Inspection_Tool_Selection__c</fullName>
        <inlineHelpText>Provide reason if you are not selecting recommended tool</inlineHelpText>
        <label>Reason for Inspection Tool Selection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Recommended_Inspection_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Inspection Tool</label>
        <referenceTo>CLQ_Inspection_Tools__c</referenceTo>
        <relationshipLabel>Inspections (Recommended Inspection Tool)</relationshipLabel>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Report_Sent_Date__c</fullName>
        <label>Report Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Representative_Email__c</fullName>
        <label>Representative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <controllingField>CLQ_Inspection_Type__c</controllingField>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Specialist_Reviewer__c</fullName>
        <label>Specialist/Reviewer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_in_Compliance__c</fullName>
        <label>Staff in Compliance</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_State__c</fullName>
        <formula>TEXT(CLQ_Program__r.CLQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Street_Address_1__c</fullName>
        <formula>CLQ_Program__r.CLQ_Street_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Street_Address_2__c</fullName>
        <formula>CLQ_Program__r.CLQ_Street_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Supervisor_Approver__c</fullName>
        <formula>CreatedBy.Manager.FirstName &amp;&quot; &quot;&amp;  CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor/Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_Staff__c</fullName>
        <label>Total Staff</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Type__c</fullName>
        <label>Inspection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Type_of_Audit__c</fullName>
        <label>Type of Audit</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Use_Rules_Effective_On__c</fullName>
        <label>Use Rules Effective On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Visit_Status__c</fullName>
        <label>Visit Status</label>
        <picklist>
            <picklistValues>
                <fullName>To be Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Visit_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Tool</label>
        <referenceTo>CLQ_Visit_Tool__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Zip_Code__c</fullName>
        <formula>CLQ_Program__r.CLQ_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Notes__c</fullName>
        <label>External Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Approved_onsite_rating__c</fullName>
        <label>Final Approved onsite rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Comments__c</fullName>
        <label>Inspection Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Inspection_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Status__c</fullName>
        <label>Inspection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inspection complete approval indicator</description>
        <label>IsApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Rating__c</fullName>
        <label>Onsite Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inspection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Inspection_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OnsiteComplChek_CLQ_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>OnsiteComplChek</label>
        <queue>OnsiteComplChek</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Inspection# {000000}</displayFormat>
        <label>Inspection No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <recordTypes>
        <fullName>CLQ_Day_Camp_Audit</fullName>
        <active>true</active>
        <description>Day Camp Audit for Day Camp Registration</description>
        <label>Day Camp Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Inspection</fullName>
        <active>true</active>
        <label>Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onsite_Visit_Record_Type</fullName>
        <active>false</active>
        <label>Onsite Visit Record Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CLQ_On_Site_Representative_Validation</fullName>
        <active>true</active>
        <description>On site representative is mandatory If &apos;yes&apos; is selected for On-site representative present.</description>
        <errorConditionFormula>(IF
(AND
(ISPICKVAL(CLQ_On_Site_Representative_Present__c ,&quot;Yes&quot;), ISBLANK(CLQ_On_Site_Representative__c)), true,false))</errorConditionFormula>
        <errorDisplayField>CLQ_On_Site_Representative__c</errorDisplayField>
        <errorMessage>Please enter On Site Representative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLQ_Representative_Email_Check</fullName>
        <active>true</active>
        <description>Representative Email is mandatory If &apos;yes&apos; is selected for On-site representative present.</description>
        <errorConditionFormula>(IF
(AND
(ISPICKVAL(CLQ_On_Site_Representative_Present__c ,&quot;Yes&quot;), ISBLANK( CLQ_Representative_Email__c )), true,false))</errorConditionFormula>
        <errorDisplayField>CLQ_Representative_Email__c</errorDisplayField>
        <errorMessage>Please enter Representative Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_up_Inspection_Date_is_Required</fullName>
        <active>true</active>
        <description>If the follow inspection required is &apos;Yes&apos; inspection follow up date is required.</description>
        <errorConditionFormula>AND(ISPICKVAL(CLQ_Is_Follow_Up_Inspection_Required__c,&apos;Yes&apos;), ISNULL(CLQ_Follow_Up_Inspection_Date__c))</errorConditionFormula>
        <errorMessage>Follow Up Inspection Date is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reviewers_cannot_change_Inspec_ownership</fullName>
        <active>true</active>
        <description>Inspection ownership cannot be changed by reviewers</description>
        <errorConditionFormula>AND (ISCHANGED( OwnerId ),($Profile.Name = &apos;Standard User JFS&apos;))</errorConditionFormula>
        <errorMessage>You cannot change record ownership</errorMessage>
    </validationRules>
</CustomObject>